# esp-rss

./: Cargo.toml  build.rs  lv_conf.h  sdkconfig.debug
.cargo/: config.toml
src/: freshrss.rs  main.rs  serde_rss.rs
src/ui/: main.slint
