[package]
name = "esp-rss"
version = "0.1.0"
authors = ["Thibaut Artis <thibaut.artis@ackl.io>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]

all = ["std"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }
anyhow = "1.0.71"
toml-cfg = "0.1.3"
serde = "1.0.164"
serde_json = "1.0"

[build-dependencies]
embuild = "0.31.2"
