[package]
name = "esp-rss"
version = "0.1.0"
authors = ["Thibaut Artis <thibaut.artis@ackl.io>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]

all = ["std"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }
embedded-hal = { version = "0.2.7", optional = true, default-features = false }
embedded-graphics = "0.8.0"
ft6x06 = "0.1.2"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
anyhow = "1.0.71"
toml-cfg = "0.1.3"
serde = "1.0.164"
serde_json = "1.0"
mipidsi = "0.7.1"
shared-bus = "0.2.5"
# lvgl = {version = "0.6.2", default-features = false, features = ["alloc", "embedded_graphics", "unsafe_no_autoinit"]}
slint = { version = "1.1.1", default-features = false, features = ["compat-1-0", "unsafe-single-threaded", "libm"]}

[build-dependencies]
embuild = {version = "0.31.2", default-features = false }
slint-build = "1.1.0"